--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "es6-promise": "^4.2.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "axios": "^0.19.2"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -39,6 +40,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
